Can display arrows

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@remotion/player": "^3.3.94",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-xarrows": "^2.0.2",
     "remotion": "^3.3.94"
   },
   "devDependencies": {
