--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "react-error-boundary": "^4.0.9",
     "serve": "^14.2.0",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "vitest": "^0.32.0"
   }
 }
